Changed data path

--- a/code/Lending club case study file.ipynb
+++ b/code/Lending club case study file.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +73,8 @@
    ],
    "source": [
     "# Load the data dictionary and loan data into pandas\n",
-    "data_dictionary = pd.read_excel('Data_Dictionary.xlsx')\n",
-    "loan_data = pd.read_csv('loan.csv')"
+    "data_dictionary = pd.read_excel('../data/Data_Dictionary.xlsx')\n",
+    "loan_data = pd.read_csv('../data/loan.csv')"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "(117, 2)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "116                    NaN  * Employer Title replaces Employer Name for al..."
       ]
      },
-     "execution_count": 122,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "(115, 2)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "(39717, 111)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        " 'application_type']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "[8 rows x 87 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
        "(39717, 57)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
        "0"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,25 +1140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index([' ', 'Debt Consolidation', 'Camping Membership', 'Personal Loan',\n",
-      "       'personal loan', 'credit card debt consolidation',\n",
-      "       'credit card consolidation', 'refinancing', 'consolidate debt',\n",
-      "       'consolidate credit cards',\n",
-      "       '  Borrower added on 12/06/11 > Debt consolidation<br>',\n",
-      "       '  Borrower added on 09/21/11 > Debt consolidation<br/>',\n",
-      "       'Motorcycle Loan',\n",
+      "Index([' ', 'Debt Consolidation', 'Camping Membership', 'personal loan',\n",
+      "       'credit card debt consolidation', 'Personal Loan',\n",
+      "       'credit card consolidation', 'consolidate credit cards',\n",
+      "       'consolidate debt', 'consolidation',\n",
       "       'I will use the loan and pay off all of my outstanding credit card debts that are spread out. It would be great to just focus on paying back one lender with a lower interest rate and not have to worry about keeping track each CC individually.',\n",
+      "       '  Borrower added on 09/21/11 > Debt consolidation<br/>',\n",
+      "       '  Borrower added on 08/31/11 > Presently embarking on the construction of a Business-class Social Network website potentially larger than other Social Networking sites.  This website will cater to a Global audience of entrepreneurs, business professionals and individuals of all professions, industries and backgrounds.  If successful, the revenue generated from this website will be exponential. Currently employed in the banking industry for 2 years and have been self-employed for 2.5 yrs.  Planning to maintain full-time job in the interim while the website is being built and starts to generate substantial revenue.  Any and all contributions are greatly appreciated.<br/>null',\n",
+      "       'None', '  Borrower added on 12/06/11 > Debt consolidation<br>',\n",
+      "       'Consolidate', '  Borrower added on 11/23/11 > Debt consolidation<br>',\n",
       "       'This loan would be to consolidate my credit card debts, and have one payment at a reasonable interest rate.',\n",
-      "       'Debt consolidation', 'debt consolidation', 'consolidation',\n",
-      "       'Consolidate',\n",
-      "       'I have 2nd mortgage on a rental property with balance of $109k.  I have cash flow of $85k and plan to pay off the 2nd mortgage using this loan to make up for rest of the balance.  You will see a 2nd mortgage debt on my credit  around $965.00 which will go away once this loan is approved as I will be paying it off.  The interest rate needs to be below 9% since I can use my credit card to borrow same money for 10%.'],\n",
+      "       'Personal loan', 'Car financing'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -1171,27 +1170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "US Army                            134\n",
-       "Bank of America                    109\n",
-       "IBM                                 66\n",
-       "AT&T                                59\n",
-       "Kaiser Permanente                   56\n",
-       "                                  ... \n",
-       "Online Trading Academy               1\n",
-       "Frys Electronics                     1\n",
-       "TNG                                  1\n",
-       "American Seafoods International      1\n",
-       "Jerry's Famous Deli                  1\n",
+       "US Army                        134\n",
+       "Bank of America                109\n",
+       "IBM                             66\n",
+       "AT&T                            59\n",
+       "Kaiser Permanente               56\n",
+       "                              ... \n",
+       "The Designory                    1\n",
+       "Barnes and Noble College         1\n",
+       "Firestone Building Products      1\n",
+       "NMDP                             1\n",
+       "CITY OF SANTA BARBARA            1\n",
        "Name: emp_title, Length: 28820, dtype: int64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1262,7 @@
        "Name: mths_since_last_record, Length: 111, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1313,7 @@
        "(39717, 56)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1354,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1380,6 @@
     }
    ],
    "source": [
-    "\n",
     "loan_data.emp_title.apply(lambda x: print())"
    ]
   },
