--- a/code/Lending club case study file.ipynb
+++ b/code/Lending club case study file.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "(117, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "116                    NaN  * Employer Title replaces Employer Name for al..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "(115, 2)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "(39717, 111)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        " 'application_type']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "[8 rows x 87 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,8 @@
     "   - Check null values\n",
     "   - Check duplicates\n",
     "   - Remove irrelevant features\n",
-    "   - impute null values\n",
+    "   - Impute null values\n",
+    "   - Check univariate columns\n",
     "   - Outlier detection and removal"
    ]
   },
@@ -1018,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1037,7 @@
        "(39717, 57)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1072,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1125,13 +1126,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check columns with greater than 3 percent nulls\n",
+    "def get_null_count_percentage():\n",
+    "    null_counts = loan_data.shape[0] - loan_data.count()\n",
+    "    total_rows = loan_data.shape[0]\n",
+    "    null_count_percentage = 100 * null_counts / total_rows\n",
+    "    return null_count_percentage\n",
     "\n",
     "total_rows = loan_data.shape[0]\n",
     "null_count_percentage = 100 * null_counts / total_rows\n",
@@ -1140,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1196,7 @@
        "Name: emp_title, Length: 28820, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1235,14 +1241,14 @@
     }
    ],
    "source": [
-    "# We can compare the default with public record update\n",
+    "# Since there are too many nulls, we can remove this column\n",
     "with pd.option_context('display.max_colwidth', None):\n",
     "    print(data_dictionary[data_dictionary.LoanStatNew == 'mths_since_last_record'].Description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1268,7 @@
        "Name: mths_since_last_record, Length: 111, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1319,7 @@
        "(39717, 56)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1360,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,22 +1371,353 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=39717, step=1)"
+       "self                                     24\n",
+       "self employed                            11\n",
+       "self-employed                             7\n",
+       "Start Dancing (self employed)             1\n",
+       "Catherine Reitmyer(self)                  1\n",
+       "Myself--Childcare                         1\n",
+       "N/A (self-employed)                       1\n",
+       "self employer                             1\n",
+       "Media Infocus Studios (self employed)     1\n",
+       "(self) Castleforte Group                  1\n",
+       "self employed (Cate Design)               1\n",
+       "Contract / self employed                  1\n",
+       "self-contract labor                       1\n",
+       "mjmi - self                               1\n",
+       "CareOne and self employed                 1\n",
+       "Name: emp_title, dtype: int64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loan_data.emp_title.apply(lambda x: print())"
+    "emp_title_data = loan_data.emp_title.astype(str);\n",
+    "emp_title_data[emp_title_data.str.contains('self')].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We will input na as self, since no job is given for them\n",
+    "loan_data.emp_title.fillna(value='self', inplace=True)\n",
+    "loan_data.emp_title.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove mths_since_last_record as per analysis\n",
+    "loan_data.drop('mths_since_last_record', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39717, 55)"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Putting a median or any statistic value could be a problem here, because we would consider people who were never delinquent also.\n",
+    "# We are marking na fields as never here, because taking any number would harm the data anyways.\n",
+    "loan_data.mths_since_last_delinq.fillna(value='never', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For desc we will be putting an empty string if there is no info why loan was taken. Empty string will be filtered out of any check\n",
+    "# that we do using words\n",
+    "loan_data.desc.fillna(value='', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We notice that null percentage is less than 3 percent in general. We will replace all these null values with mod."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "less_than_3_percentage_null_data = (get_null_count_percentage()).sort_values(ascending=False)\n",
+    "less_than_3_percentage_null_data = less_than_3_percentage_null_data[(less_than_3_percentage_null_data < 3) & (less_than_3_percentage_null_data > 0)]\n",
+    "for column in less_than_3_percentage_null_data.index:\n",
+    "    mode_val = loan_data[column].mode()[0]\n",
+    "    loan_data[column].fillna(value=mode_val, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    55\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_data.isna().sum().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.5 Check univariate columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some variables have unique count of 1. Since they don't change at all, they can be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pymnt_plan</th>\n",
+       "      <th>initial_list_status</th>\n",
+       "      <th>collections_12_mths_ex_med</th>\n",
+       "      <th>policy_code</th>\n",
+       "      <th>application_type</th>\n",
+       "      <th>acc_now_delinq</th>\n",
+       "      <th>chargeoff_within_12_mths</th>\n",
+       "      <th>delinq_amnt</th>\n",
+       "      <th>tax_liens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>INDIVIDUAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pymnt_plan initial_list_status  collections_12_mths_ex_med  policy_code  \\\n",
+       "0          n                   f                         0.0            1   \n",
+       "1          n                   f                         0.0            1   \n",
+       "2          n                   f                         0.0            1   \n",
+       "3          n                   f                         0.0            1   \n",
+       "4          n                   f                         0.0            1   \n",
+       "5          n                   f                         0.0            1   \n",
+       "\n",
+       "  application_type  acc_now_delinq  chargeoff_within_12_mths  delinq_amnt  \\\n",
+       "0       INDIVIDUAL               0                       0.0            0   \n",
+       "1       INDIVIDUAL               0                       0.0            0   \n",
+       "2       INDIVIDUAL               0                       0.0            0   \n",
+       "3       INDIVIDUAL               0                       0.0            0   \n",
+       "4       INDIVIDUAL               0                       0.0            0   \n",
+       "5       INDIVIDUAL               0                       0.0            0   \n",
+       "\n",
+       "   tax_liens  \n",
+       "0        0.0  \n",
+       "1        0.0  \n",
+       "2        0.0  \n",
+       "3        0.0  \n",
+       "4        0.0  \n",
+       "5        0.0  "
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We see that there is no special property in these univariate columns\n",
+    "univariate_columns = loan_data.loc[0:5, loan_data.nunique() == 1]\n",
+    "univariate_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loan_data.drop(univariate_columns, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "term                    2\n",
+       "pub_rec_bankruptcies    3\n",
+       "loan_status             3\n",
+       "verification_status     3\n",
+       "pub_rec                 5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All univariate columns are removed\n",
+    "loan_data.nunique().sort_values().head()"
    ]
   },
   {
