--- a/Nikhil_Pathania.ipynb
+++ b/Nikhil_Pathania.ipynb
@@ -4254,25 +4254,24 @@
     "- We don't have any conclusion pertaining to our use-case\n",
     "\n",
     "#### Segmented univariate analysis result\n",
-    "- It gave interesting insights when we group by loan status.\n",
-    "- **Insights**\n",
-    "    - Loan amount was greater for people who charged off. \n",
-    "    - People with less annual income have more chance of charge off. Half of people who defaulted have annual income b/w 37000 and 75000\n",
-    "    - Loans with higher interst rate leads to charge off. Half of fully paid loans are in 8.5 to 14 interest rate.\n",
-    "    - Lower debt to interest ratio have higher chances of full payback. Half of the fully paid loan have dti ratio between 8 and 18 percent\n",
-    "    - Higher credit utilization rate results in more chances of default. Half of the people who defaulted have this rate between 34 and 79.\n",
+    "\n",
+    "- Higher loan amount were alloted to people who defaulted.\n",
+    "- People with less annual income have more chance of defaulting. Half of people who defaulted have annual income b/w 37000 and 75000\n",
+    "- Loans with higher interst rate lead to a default. Half of fully paid loans are in 8.5 to 14 interest rate.\n",
+    "- Lower debt to interest ratio have higher chances of full payback. Half of the fully paid loan have dti ratio between 8 and 18 percent\n",
+    "- Higher credit utilization rate, results into more chances of a default. Half of the people who defaulted have this rate between 34 and 79.\n",
     "\n",
     "#### Correlation b/w columns\n",
     "- No interesting pattern related to our use-case found.\n",
     "    \n",
     "#### Bivariate analysis\n",
-    "- High percentage of defaults happen for Small business, renewable energy and educational loans.\n",
-    "- Higher percentage of defaults happen in 60 months term.\n",
-    "- Defaults are inversly proportional to the loan grade. Higher the grade, lesser the defaults. Pattern is similar for sub-grades with few exceptions.\n",
-    "- Home ownership marked as Rent have slightly higher chance to default\n",
-    "- People with verified income source have slightly higher chance to default.\n",
-    "- Applicants from states Nevada, Florida, Missouri have higher chances of defaults\n",
-    "- If home ownership is mortgage and loan amount is high, there is a higher chance of default.\n",
+    "- High percentage of defaults happen for the small business, renewable energy and educational loans.\n",
+    "- There are higher chances of a default happen in 60 months term.\n",
+    "- Defaults are inversly proportional to the loan grade. Higher the grade, lesser the defaults.\n",
+    "- People whose home ownership is rent have slightly higher chance of defaulting\n",
+    "- People with a verified income source have slightly higher chance of defaulting.\n",
+    "- Loan applicants from states Nevada, Florida, Missouri have higher chance of defaulting.\n",
+    "- If home ownership is of mortgage type and loan amount is high, there is a higher chance of default.\n",
     "- As loan amount for small business increase, we have higher chances of default.\n"
    ]
   }
