--- a/Nikhil_Pathania.ipynb
+++ b/Nikhil_Pathania.ipynb
@@ -4256,7 +4256,7 @@
     "#### Segmented univariate analysis result\n",
     "\n",
     "- Higher loan amount were alloted to people who defaulted.\n",
-    "- People with less annual income have more chance of defaulting. Half of people who defaulted have annual income b/w 37000 and 75000\n",
+    "- Applicants with less annual income have more chance of defaulting. Half of people who defaulted have annual income b/w 37000 and 75000\n",
     "- Loans with higher interst rate lead to a default. Half of fully paid loans are in 8.5 to 14 interest rate.\n",
     "- Lower debt to interest ratio have higher chances of full payback. Half of the fully paid loan have dti ratio between 8 and 18 percent\n",
     "- Higher credit utilization rate, results into more chances of a default. Half of the people who defaulted have this rate between 34 and 79.\n",
@@ -4267,10 +4267,10 @@
     "#### Bivariate analysis\n",
     "- High percentage of defaults happen for the small business, renewable energy and educational loans.\n",
     "- There are higher chances of a default happen in 60 months term.\n",
-    "- Defaults are inversly proportional to the loan grade. Higher the grade, lesser the defaults.\n",
-    "- People whose home ownership is rent have slightly higher chance of defaulting\n",
-    "- People with a verified income source have slightly higher chance of defaulting.\n",
-    "- Loan applicants from states Nevada, Florida, Missouri have higher chance of defaulting.\n",
+    "- Defaults are inversely proportional to the loan grade. Higher the grade, lesser the defaults.\n",
+    "- Applicants whose home ownership is rent have slightly higher chance of defaulting\n",
+    "- Applicants with a verified income source have slightly higher chance of defaulting.\n",
+    "- Applicants from states Nevada, Florida, Missouri have higher chance of defaulting.\n",
     "- If home ownership is of mortgage type and loan amount is high, there is a higher chance of default.\n",
     "- As loan amount for small business increase, we have higher chances of default.\n"
    ]
